src/ui/snapshots/siggy__ui__snapshot_tests__lock_screen.snap
---
source: src/ui/mod.rs
assertion_line: 780
expression: output
---

                                           siggy - locked
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                         Passphrase: *****                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
