src/ui/snapshots/siggy__ui__snapshot_tests__message_request.snap
---
source: src/ui.rs
expression: output
---
 Chats               │╭ +15550007777 ──────────────────────────────────────────────────────────────╮
▸ ? +15550007777     ││[14:00] <+15550007777> Hey, I got your number from the meetup. Is this the  │
  • ##Family (2)     ││right person?                                                               │
  • Carol (1)        ││                                                                            │
    ##Rust Devs      ││                                                                            │
    Bob              ││                                                                            │
    Alice            ││                                                                            │
    Dave             ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     │╰────────────────────────────────────────────────────────────────────────────╯
                     │╭────────────────────────────────────────────────────────────────────────────╮
                     ││  Type a message...                                                         │
                     │╰────────────────────────────────────────────────────────────────────────────╯
 [INSERT] │  ● connected │ +15550007777 │ 7 chats
