src/ui/snapshots/siggy__ui__snapshot_tests__no_active_conversation.snap
---
source: src/ui/mod.rs
expression: output
---
 Chats               │╭ siggy ─────────────────────────────────────────────────────────────────────╮
  ? +15550007777 (1) ││                                                                            │
  • ##Family (2)     ││  Welcome to siggy                                                          │
  • Carol (1)        ││                                                                            │
    ##Rust Devs      ││  Getting started                                                           │
    Bob              ││  Tab / Shift+Tab    cycle through conversations                            │
    Alice            ││  /join <contact>    open a conversation by name or number                  │
    Dave             ││  Esc                switch to Normal mode (vim keys)                       │
                     ││                                                                            │
                     ││  Useful commands                                                           │
                     ││  /contacts          browse synced contacts                                 │
                     ││  /settings          configure preferences                                  │
                     ││  /help              all commands and keybindings                           │
                     ││                                                                            │
                     ││  Ctrl+←/→ to resize sidebar                                                │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     │╰────────────────────────────────────────────────────────────────────────────╯
                     │╭────────────────────────────────────────────────────────────────────────────╮
                     ││  Type / for commands...                                                    │
                     │╰────────────────────────────────────────────────────────────────────────────╯
 [INSERT] │  ● connected │ no conversation │ 7 chats
