src/ui/snapshots/siggy__ui__snapshot_tests__settings_overlay.snap
---
source: src/ui/mod.rs
assertion_line: 698
expression: output
---
 Chats               │╭ Alice ─────────────────────────────────────────────────────────────────────╮
  ? +15550007777 (1) ││[08:00] <Alice> Good morning! How's your day going?                         │
  • ##Family (2)     ││  ╭ Settings ──────────────────────────────────────╮                        │
  • Carol (1)        ││● │  Notifications                                 │                        │
    ##Rust Devs      ││  │    [x] Direct message notifications            │                        │
    Bob              ││[0│    [x] Group message notifications             │ a run                  │
▸   Alice            ││● │    [ ] Desktop notifications                   │bed before 7            │
    Dave             ││[0│    Notification preview: full                  │e habit                 │
                     ││● │  Display                                       │                        │
                     ││[0│    [x] Link previews                           │tomatic                 │
                     ││  │    [ ] Date separators                         │                        │
                     ││[0│    [x] Read receipts                           │t too                   │
                     ││✓ │    [x] Receipt colors                          │                        │
                     ││[0│    [ ] Nerd Font icons                         │                        │
                     ││[0│    [ ] Emoji to text                           │/localmarket.example.com│
                     ││  │    [x] Show usernames                          │                        │
                     ││  │    Image mode: halfblock                       │ry Saturday…            │
                     ││  │  Messages                                      │                        │
                     ││○ │    [x] Show reactions                          │                        │
                     ││✓ │    [ ] Verbose reactions                       │owded.                  │
                     ││○ │    [x] Send read receipts                      │                        │
                     ││○ │  Interface                                     │                        │
                     ││○ │    [x] Sidebar visible                         │nt to browse early      │
                     ││[0│    [x] Mouse support                           │                        │
                     ││  │    [ ] Sidebar on right                        │                        │
                     │╰──│    Customize...                                │────────────────────────╯
                     │╭──╰────────────────────────────────────────────────╯────────────────────────╮
                     ││  Type a message...                                                         │
                     │╰────────────────────────────────────────────────────────────────────────────╯
 [INSERT] │  ● connected │ Alice │ 7 chats
