src/ui/snapshots/siggy__ui__snapshot_tests__styled_text.snap
---
source: src/ui.rs
expression: output
---
 Chats               │╭ Bob ───────────────────────────────────────────────────────────────────────╮
  ? +15550007777 (1) ││[10:05] <Bob> Can you review my PR? It's the auth refactor                  │
  • ##Family (2)     ││[10:08] <Bob> The key change is in verify_token() — switched from HMAC to   │
  • Carol (1)        ││Ed25519                                                                     │
    ##Rust Devs      ││● [10:12] <you> Looks good! Left a few comments on the error handling       │
▸   Bob              ││[10:15] <Bob> Thanks! I'll address those. Also the migration is             │
    Alice            ││backwards-compatible so no rush on deploy                                   │
    Dave             ││  ╭ <you> Looks good! Left a few comments on the error hand…                │
                     ││[10:20] <Bob> Fixed those error handling bits, PTAL                         │
                     ││✓ [10:25] <you> LGTM, approved!                                             │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     │╰────────────────────────────────────────────────────────────────────────────╯
                     │╭────────────────────────────────────────────────────────────────────────────╮
                     ││  Type a message...                                                         │
                     │╰────────────────────────────────────────────────────────────────────────────╯
 [INSERT] │  ● connected │ Bob │ 7 chats
