src/ui/snapshots/siggy__ui__snapshot_tests__unread_marker.snap
---
source: src/ui.rs
expression: output
---
 Chats               │╭ ##Family ──────────────────────────────────────────────────────────────────╮
  ? +15550007777 (1) ││[12:00] <Mom> Dinner at our place Sunday?                                   │
▸   ##Family         ││[12:05] <Dad> I'll fire up the grill                                        │
  • Carol (1)        ││● [12:10] <you> Count me in!                                                │
    ##Rust Devs      ││    ❤️  2                                                                    │
    Bob              ││─────────────────────────────── new messages ───────────────────────────────│
    Alice            ││[13:30] <Mom> Great! Bring dessert if you can                               │
    Dave             ││  ╭ <Dad> I'll fire up the grill                                            │
                     ││[13:35] <Dad> Got the burgers and corn ready                                │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     ││                                                                            │
                     │╰────────────────────────────────────────────────────────────────────────────╯
                     │╭────────────────────────────────────────────────────────────────────────────╮
                     ││  Type a message...                                                         │
                     │╰────────────────────────────────────────────────────────────────────────────╯
 [INSERT] │  ● connected │ ##Family │ 7 chats
